<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:enabled="true"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_weekly"
        android:icon="@drawable/ic_weekly_summary_24dp"
        android:enabled="true"
        android:title="@string/title_weekly_summary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_food_list"
        android:enabled="true"
        android:icon="@drawable/ic_meal_24dp"
        android:title="@string/title_list_of_food"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:enabled="true"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

</menu>
